objects/ADD_Conficguration_Rule__c.object
<CustomObject>
    <fields>
        <fullName>ADD_Configuration_Rule_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>ADD Configuration Rule Ext Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADD_Product_Rule__c</fullName>
        <label>ADD Product Rule</label>
        <referenceTo>ADD_Product_Rule__c</referenceTo>
        <relationshipLabel>ADD Configuration Rule</relationshipLabel>
        <relationshipName>ADD_Configuration_Rule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADD_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADD Product</label>
        <referenceTo>ADD_Product__c</referenceTo>
        <relationshipLabel>ADD Configuration Rule</relationshipLabel>
        <relationshipName>ADD_Configuration_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ADD Conficguration Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ADD Conficguration Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADD Configuration Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>